--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-flask==2.0.1
+Flask==2.2.5
+Werkzeug==2.2.3
 feedparser==6.0.10
 python-dotenv==1.0.1
 requests==2.26.0
@@ -9,4 +10,4 @@ flask-caching==1.10.1
 redis==4.3.4
 celery==5.2.7
 apscheduler==3.9.1
-gunicorn==20.1.0 
+gunicorn==20.1.0
